--- a/frontend/travel-thing/package.json
+++ b/frontend/travel-thing/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port 3000 --host 0.0.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.17",
