--- a/frontend/travel-thing/.do/app.yaml
+++ b/frontend/travel-thing/.do/app.yaml
@@ -5,6 +5,7 @@ services:
     github:
       repo: https://github.com/crisanalex15/TT-frontend
       branch: main
+    build_command: npm ci && npm run build
     run_command: npm start
     environment_slug: node-js
     instance_count: 1
