--- a/frontend/travel-thing/package.json
+++ b/frontend/travel-thing/package.json
@@ -2,25 +2,29 @@
   "name": "travel-thing",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "start": "vite preview --port 3000 --host 0.0.0.0"
   },
+  "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "vite": "^4.0.0"
+  },
   "devDependencies": {
     "@types/leaflet": "^1.9.17",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.0.0"
-  },
-  "dependencies": {
-    "@mapbox/polyline": "^1.2.1",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "typescript": "^5.0.2"
   }
 }
