--- a/frontend/travel-thing/package.json
+++ b/frontend/travel-thing/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "18.19.0",
+    "npm": "8.19.3"
   },
   "scripts": {
     "dev": "vite",
