--- a/frontend/travel-thing/package.json
+++ b/frontend/travel-thing/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview --port 3000 --host 0.0.0.0"
+    "start": "vite preview --port 3000 --host 0.0.0.0",
+    "serve": "vite preview --port $PORT --host $HOST"
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
